# riemann

postprogressing/: FTCS.csv  LF.csv  Lax-Wendroff.csv  cell_P.csv  cell_V.csv  cell_rho.csv  post.m  readData.r  upwind.csv
postprogressing/L-F/: cell_P.csv  cell_V.csv  cell_rho.csv
postprogressing/L-W/: cell_P.csv  cell_V.csv  cell_rho.csv
postprogressing/Roe/: cell_P.csv  cell_V.csv  cell_rho.csv
src/: CMakeLists.txt  Fvm.cpp  Fvm.h  gauss.cpp  gauss.h  main.cpp  mainburger  run.r  tempCodeRunnerFile.cpp
src/Fvm/: CMakeLists.txt  Fvm.cpp  Fvm.h
src/GaussSolver/: CMakeLists.txt  gauss.cpp  gauss.h
test/: 7-19-ii.cpp  Combinatorics.cpp  example  gauss  gauss.cpp  main.cpp  otherex.cpp  tempCodeRunnerFile.cpp  test
test/FluidProperties/: FluidProperties.cpp  FluidProperties.h
test/main合集/: main  main-LW.cpp  main2  mainFDM
程序说明/: 格式差别.md
